<resources>
    <string name="app_name">Insumos Estrategicos</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Nombre de Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresa</string>
    <string name="error_invalid_username">El nombre de usuario no es válido</string>
    <string name="error_invalid_password">El password ingresado es muy corto</string>
    <string name="error_incorrect_password">El password ingresado es incorrecto</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="message_logout_successfully">Sesión Finalizada</string>
    <string name="app_title">SGIE - MÓDULO DE REGISTRO VARIABLE</string>
    <string name="app_subtitle">SISTEMA DE GESTIÓN INSUMOS ESTRATÉGICOS</string>
    <string name="get_storehouse_list_error">No fue posible obtener el listado de almacenes,
        por favor intenta más tarde.</string>
    <string name="title_activity_main">Registro de Insumos Estratégicos</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_logout">Cerrar Sesión</string>

    <string name="storehouse_description">Planta - SAG 1 - Bolas Acero 5.5 fundidas molienda - Elecmetal - Bin 6</string>
    <string name="last_reading">Último Registro: %1$s</string>
    <string name="title_activity_landing">Menú Principal</string>

    <string name="daily_plan_main_menu">1. Crear Plan Diario</string>
    <string name="stock_register_main_menu">2. Registrar Stock</string>
    <string name="sync_register_main_menu">3. Sincronizar Registros</string>

    <string name="title_activity_daily_plan">1. Crear Plan Diario</string>
    <string name="loading_message">Cargando datos, por favor espere…</string>

    <string name="message_select_storehouses">Seleccione almacenes a registrar</string>
    <string name="message_selected_count">%1$s almacenes seleccionado(s)</string>
    <string name="message_select_at_least_one_storehouse">Debes seleccionar almenos un almacén</string>
    <string name="message_select_register">Selecciona un almacén a registrar</string>
    <string name="message_daily_plan_created">¡Plan creado exitosamente!</string>
    <string name="title_record_list">Records</string>
    <string name="title_record_detail">Record Detail</string>
    <string name="title_activity_record_stock">2. Registrar Stock</string>
    <string name="no_records_data_message">No hay registros pendientes, para registrar stock debes crear un plan diario</string>
    <string name="no_registers_data">No hay registros pendientes. Debe crear un plan diario.</string>
    <string name="title_activity_record_stock_detail">Formulario de Registro</string>

</resources>
